# machinery

./: .gitattributes  .gitignore  .golangci.yml  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  README.md  go.mod  go.sum  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  formal.yml  nightly.yml  release.yml  security.yml
agents/: machinery-build-writer.md  machinery-fsm-author.md
cmd/machinery/: alloy.go  baseline.go  check.go  check_test.go  checker_example_golden_test.go  compose.go  diag.go  golden_test.go  hook.go  hook_test.go  install.go  install_test.go  io.go  ir_dump.go  lint.go  main.go  oracle.go  oracle_test.go  pack.go  project.go  refine.go  repository_contract_test.go  scale.go  stubs.go  tla.go  update.go  update_test.go  verify_checkers.go  verify_checkers_test.go
commands/: check.md  design.md  init.md  status.md
docs/: agent-portability.md  brownfield-team-guide.md  claude-plugin.md  decision-lifecycle-pattern.md  example-reprocessing-report.md  external-checkers.md  integrity-layer.md  isolation-layer.md  policy-layer.md  rebuild-guide.md  surface-ledger.md
hooks/: hooks.json  machinery-hook.sh
internal/: README-contract.md
schemas/: evidence.schema.json  projection.schema.json
scripts/: capture-golden.sh  diff-all.sh  diff-tool.sh  preflight.sh
tests/: conftest.py  fixtures.py  test_formal_gens.py  test_machine_lint.py  test_machinery_check.py  test_oracle_gen.py
tools/: machine_lint.py
(+434 files in other folders)
